--- a/src/app/calendar-room/add-calendar/add-calendar.component.html
+++ b/src/app/calendar-room/add-calendar/add-calendar.component.html
@@ -1,9 +1,26 @@
 <h3 class="add-calendar-title">Add Events</h3>
 <p>Two weeks of events from selected calendars will be copied to the room.</p>
 
+
 <!-- Google Sign In Template -->
 
   <form [formGroup]="form" (ngSubmit)="submit()">
+    <!-- <mat-form-field appearance="fill">
+      <mat-label> Weeks In Advance </mat-label>
+      <mat-select>
+        <mat-option value="1"> 1 </mat-option>
+        <mat-option value="2"> 2 </mat-option>
+        <mat-option value="3"> 3 </mat-option>
+        <mat-option value="4"> 4 </mat-option>
+      </mat-select>
+    </mat-form-field> -->
+    <mat-form-field appearance="fill">
+      <mat-label>Angular forms (w/ deserialization)</mat-label>
+      <input matInput [matDatepicker]="endPicker"
+             formControlName="endDate">
+      <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+      <mat-datepicker #endPicker></mat-datepicker>
+    </mat-form-field>
       <h4 *ngIf="this.data.googleCal.length > 0"> Google Calendars </h4>
       <div
         formArrayName="g_calendar"
