--- a/src/app/calendar-room/calendar-room.component.scss
+++ b/src/app/calendar-room/calendar-room.component.scss
@@ -45,12 +45,14 @@ $light-color: '#fcfcfc';
 }
 
 .calendar-room-left-spacer {
-  width: 185px;
-  height: 20px;
-  margin: 12.8px;
+  // width: 185px;
+  // height: 20px;
+  // margin: 12.8px;
   // background-image: linear-gradient(90deg, #C8D6C2 0%, #33710B 100%);
   // border-radius: 8px;
-
+  margin-left:1.5em;
+  display:flex;
+  flex-direction:row;
 }
 .calendar-room-cal-nav-but-group {
   margin: 1em;
@@ -82,6 +84,10 @@ $light-color: '#fcfcfc';
 
 .favorite-button {
   color: #daa520;
+}
+
+.navigation-buttons {
+  margin-left: 1em;
 }
 
 .sidebar-wrapper {
