--- a/src/app/calendar-room/calendar-room.component.html
+++ b/src/app/calendar-room/calendar-room.component.html
@@ -60,6 +60,20 @@
       <button
         class="sidebar-button"
         mat-button
+        (click)="printVotes()"
+        style="margin-top: 0em;"
+      >
+        <div class="sidebar-button-elements">
+          <mat-icon> share </mat-icon>
+          <span class="sidebar-button-name"> Print </span>
+        </div>
+      </button>
+    </div>
+
+    <div class="sidebar-button-wrapper">
+      <button
+        class="sidebar-button"
+        mat-button
         (click)="openInviteDialog(2)"
         style="margin-top: 0em;"
       >
@@ -100,9 +114,11 @@
       <mat-accordion *ngIf="roomMemDoc.member as member">
         <mat-expansion-panel
           class="expansion-panel"
-          *ngIf="suggestedFT$ | async as meetingTimes"
+          *ngIf="combinedSuggestion as meetingTimes"
           [expanded]="true"
         >
+
+      <!-- *ngIf = "combinedSuggestion | async as meetingTimes" -->
           <!-- For each when each suggested time is clicked, it should:
           1) increment the userCount
           2) append current user to the users list
@@ -119,15 +135,6 @@
           <mat-divider class="line-divider"></mat-divider>
           <div class="suggestedTimeList">
             <div *ngFor="let meetingTime of meetingTimes">
-<<<<<<< HEAD
-              <button class="suggestedTime"
-              mat-stroked-button (click)="addVote(member, meetingTime.start)"
-              (mouseenter)="addTempEvent(meetingTime.start, meetingTime.end)"
-              (mouseleave)="removeTempEvent()">
-                <span>{{meetingTime.start | date:'MMM dd, yyyy'}} | </span>
-                <span> {{meetingTime.start | date:'h:mm aaa' }} - {{meetingTime.end | date:'h:mm aaa'}}</span>
-                <ng-container *ngIf="{ room: room$ | async, member: member$ | async } as roomMemDoc">
-=======
               <button
                 class="suggestedTime"
                 mat-stroked-button
@@ -135,7 +142,7 @@
                 (mouseenter)="addTempEvent(meetingTime.start, meetingTime.end)"
                 (mouseleave)="removeTempEvent()"
               >
-                <span>{{ meetingTime.start | date: "MMM dd, yyyy" }} | </span>
+                <span>{{ meetingTime.start | date: "MMM dd, yyyy" }} </span>
                 <span>
                   {{ meetingTime.start | date: "h:mm aaa" }} -
                   {{ meetingTime.end | date: "h:mm aaa" }}</span
@@ -146,12 +153,11 @@
                     member: member$ | async
                   } as roomMemDoc"
                 >
->>>>>>> 05216f0f4ce62c34da7812477f7e93631164daf3
                   <ng-container *ngIf="roomMemDoc.room as room">
                     <app-user-bar
-                      [userCount]="room.memberCount"
-                      [users]="room.members"
-                      [userImg]="room.profileImages"
+                      [userCount]="meetingTime.count"
+                      [users]="meetingTime.UIDs"
+                      [userImg]="meetingTime.profileImages"
                     ></app-user-bar>
                   </ng-container>
                 </ng-container>
@@ -164,14 +170,10 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-<<<<<<< HEAD
-    <div class="calendar-room-title-container" *ngIf="{ room: room$ | async, member: member$ | async } as roomMemDoc">
-=======
     <div
       class="calendar-room-title-container"
       *ngIf="{ room: room$ | async, member: member$ | async } as roomMemDoc"
     >
->>>>>>> 05216f0f4ce62c34da7812477f7e93631164daf3
       <div class="calendar-room-title-wrapper">
         <button mat-icon-button routerLink="/home/cal">
           <mat-icon> west </mat-icon>
