--- a/src/styles.scss
+++ b/src/styles.scss
@@ -257,6 +257,7 @@ $cal-bg-secondary: #fff;
 .mat-button-toggle-label-content {
   font-weight: 400;
   text-transform: uppercase;
+  // line-height:2.5em;
 }
 
 // Left Button Toggle Borders
